Fix: Images doesnt wrap

--- a/src/styles/ImagesList.css
+++ b/src/styles/ImagesList.css
@@ -7,6 +7,6 @@
 .images-list-items {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
